test/files/neg/t2796.check
t2796.scala:9: warning: early initializers are deprecated; use trait parameters instead.
trait T1 extends {
                 ^
t2796.scala:13: warning: early initializers are deprecated; use trait parameters instead.
trait T2 extends {
                 ^
t2796.scala:17: warning: early initializers are deprecated; use trait parameters instead.
class C1 extends {
                 ^
t2796.scala:14: error: early type members are unsupported: move them to the regular body; the semantics are the same
  type X = Int                       // warn
       ^
three warnings found
one error found
